# app/graphql/types/NeighborhoodType.js
@@ -3,8 +3,8 @@ const { GraphQLObjectType, GraphQLID, GraphQLString } = require('graphql');
 const NeighborhoodType = new GraphQLObjectType({
   name: 'Neighborhood',
   fields: () => ({
-    barrio_id: { type: GraphQLID },
-    barrio_nombre: { type: GraphQLString },
+    id: { type: GraphQLID },
+    name: { type: GraphQLString },
   }),
 });
 
